--- a/mi-portafolio/src/app/portafolio/pasatiempo/pasatiempo/pasatiempo.component.html
+++ b/mi-portafolio/src/app/portafolio/pasatiempo/pasatiempo/pasatiempo.component.html
@@ -1,1 +1,14 @@
-<p>pasatiempo works!</p>
+
+<div class="pasatiempo">
+    <h3 class="pasatiempo-titulo">Pasatiempo </h3>
+    <p class="pasatiempo-texto">
+      
+    </p>
+  </div>
+  
+  <div class="pasatiempo">
+    <h3 class="pasatiempo-titulo">Pasatiempo </h3>
+    <p class="pasatiempo-texto">
+    
+    </p>
+  </div>
