--- a/mi-portafolio/src/app/portafolio/portafolio.component.html
+++ b/mi-portafolio/src/app/portafolio/portafolio.component.html
@@ -1,10 +1,30 @@
-<div class="portafolio-container">
+<!-- <div class="portafolio-container">
     <div class="column">
-      <h2>Foto:</h2>
+    
       <app-mifoto></app-mifoto>
     </div>
-    
+  
+</div> -->
+
+<!-- <div class="information-container">
+
+</div> -->
+
+<div class="grid-container">
+  <div class="grid-item">     
+     <app-mifoto></app-mifoto>
 </div>
+<div class="grid-item">
+  <form>
+    <app-informacion></app-informacion>    
+  </form> 
+</div>
+<div class="grid-item">
+    <app-pasatiempo></app-pasatiempo> 
+</div>
+
+</div>
+
 
 
   
