--- a/mi-portafolio/src/app/portafolio/informacion/informacion/informacion.component.html
+++ b/mi-portafolio/src/app/portafolio/informacion/informacion/informacion.component.html
@@ -1,1 +1,25 @@
-<p>informacion works!</p>
+
+<div class="containerinformation">
+   
+    <div>
+        <label for="nombre">Nombre:</label>
+        <input type="text" id="nombre" name="nombre" required>
+      </div>
+      <div>
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required>
+      </div>
+      <div>
+        <label for="telefono">Teléfono:</label>
+        <input type="tel" id="telefono" name="telefono">
+      </div>
+      <div>
+        <label for="mensaje">Mensaje:</label>
+        <textarea id="mensaje" name="mensaje" required></textarea>
+      </div>
+      <button type="submit">Enviar</button>
+</div>
+
+ 
+
+  
