--- a/mi-portafolio/src/app/portafolio/pasatiempo/pasatiempo/pasatiempo.component.html
+++ b/mi-portafolio/src/app/portafolio/pasatiempo/pasatiempo/pasatiempo.component.html
@@ -1,14 +1,15 @@
+<div class="pasatiempo">
+  <h3 class="pasatiempo-titulo">Baloncesto</h3>
+  <p class="pasatiempo-texto" id="pasatiempo">
+      El baloncesto es un emocionante deporte que combina habilidad, estrategia y trabajo en equipo. Es una actividad que promueve la salud física y mental, además de fomentar la camaradería entre jugadores. Desde encestar el balón hasta realizar jugadas espectaculares, el baloncesto es una pasión que une a personas de todas las edades y culturas.
+  </p>
+</div>
 
 <div class="pasatiempo">
-    <h3 class="pasatiempo-titulo">Pasatiempo </h3>
-    <p class="pasatiempo-texto">
-      
-    </p>
-  </div>
-  
-  <div class="pasatiempo">
-    <h3 class="pasatiempo-titulo">Pasatiempo </h3>
-    <p class="pasatiempo-texto">
-    
-    </p>
-  </div>
+  <h3 class="pasatiempo-titulo">Bailar</h3>
+  <p class="pasatiempo-texto">
+      Bailar es una expresión artística que permite liberar emociones y conectar con la música de una manera única. Ya sea moviéndose al ritmo de la música en una fiesta o perfeccionando pasos en una clase de baile, el arte del baile ofrece una sensación de alegría y libertad. Bailar es una forma de expresión que trasciende las barreras del lenguaje y une a las personas en una celebración de la vida.
+  </p>
+</div>
+
+
