--- a/mi-portafolio/src/app/portafolio/informacion/informacion/informacion.component.css
+++ b/mi-portafolio/src/app/portafolio/informacion/informacion/informacion.component.css
@@ -1,51 +1,30 @@
-/* Estilos para el contenedor principal del formulario de información */
-.form-container {
-    max-width: 40%; /* Cambiado a 40% */
-    margin: 0 auto;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  }
-  
-  /* Estilos para los elementos de formulario en el formulario de información */
-  label {
-    display: block;
-    margin-bottom: 10px;
-    font-weight: bold;
-    color: #333;
-  }
-  
-  input[type="text"],
-  input[type="email"],
-  input[type="tel"],
-  textarea {
-    width: 100%; /* Cambiado a 100% */
-    padding: 10px;
-    margin-bottom: 20px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    box-sizing: border-box;
-  }
-  
-  button[type="submit"] {
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    padding: 10px 20px;
-    cursor: pointer;
-    font-size: 16px;
-  }
-  
-  button[type="submit"]:hover {
-    background-color: #0056b3;
-  }
-  
-  p {
-    font-size: 24px;
-    text-align: center;
-    margin-bottom: 20px;
-    color: #007bff;
-  }
-  
+.containerinformation {
+  max-width: 300px;
+  margin: 0 auto;
+  padding: 20px;
+  text-align: left; 
+}
+
+.containerinformation p {
+  margin: 20px 0; 
+  font-size: 19px;
+}
+
+.containerinformation button {
+  display: block;
+  width: 100%; 
+  margin: 20px auto;
+  padding: 15px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 18px;
+}
+
+.containerinformation button:hover {
+  background-color: #0056b3;
+}
+
+
