--- a/mi-portafolio/src/app/portafolio/pasatiempo/pasatiempo/pasatiempo.component.css
+++ b/mi-portafolio/src/app/portafolio/pasatiempo/pasatiempo/pasatiempo.component.css
@@ -18,9 +18,13 @@
     font-size: 16px;
     line-height: 1.6;
     color: #333;
+    width: 49%;
+    max-width: 200px;
+    min-width: 400px;
   }
  
   .pasatiempo-resaltado {
     font-weight: bold;
     color: #007bff;
   }
+
