--- a/mi-portafolio/src/app/portafolio/portafolio.component.css
+++ b/mi-portafolio/src/app/portafolio/portafolio.component.css
@@ -12,6 +12,8 @@
     background-color: #f0f0f0; 
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    max-width: 500px;
+    min-width: 400px;
   }
   
   
