--- a/mi-portafolio/src/app/portafolio/informacion/informacion/informacion.component.html
+++ b/mi-portafolio/src/app/portafolio/informacion/informacion/informacion.component.html
@@ -1,6 +1,6 @@
 <div class="containerinformation">
   <p><strong>Nombres Completos:</strong> Mishell Stefania Castellano Beltrán</p>
-  <p><strong>Email:</strong> mscastellano espe.edu.ec</p>
+  <p><strong>Email:</strong> mscastellano&#64;espe.edu.ec</p>
   <p><strong>Teléfono:</strong> 0968743715</p>
 
 </div>
@@ -9,5 +9,5 @@
       <label for="mensaje" style="display: none;">Mensaje:</label>
       <textarea id="mensaje" name="mensaje" style="display: none;" required></textarea>
   </div>
-  <button type="submit">Enviar</button>
+  <button type="submit" style="background-color: rgb(20, 99, 217); padding: 10px 20px; font-size: 16px;">Enviar</button>
 </div>
