--- a/mi-portafolio/src/app/portafolio/portafolio.component.html
+++ b/mi-portafolio/src/app/portafolio/portafolio.component.html
@@ -1,23 +1,13 @@
-<!-- <div class="portafolio-container">
-    <div class="column">
-    
-      <app-mifoto></app-mifoto>
-    </div>
-  
-</div> -->
 
-<!-- <div class="information-container">
-
-</div> -->
 
 <div class="grid-container">
-  <div class="grid-item">     
+  <div class="grid-item1">     
      <app-mifoto></app-mifoto>
 </div>
-<div class="grid-item">
+<div class="grid-item2">
     <app-informacion></app-informacion>     
 </div>
-<div class="grid-item">
+<div class="grid-item3">
     <app-pasatiempo></app-pasatiempo> 
 </div>
 
