--- a/mi-portafolio/src/app/portafolio/mifoto/mifoto/mifoto.component.css
+++ b/mi-portafolio/src/app/portafolio/mifoto/mifoto/mifoto.component.css
@@ -1,10 +1,10 @@
 .mifoto-container {
-  max-width: 200px;
-  margin: 45px; 
+  max-width: 150px; 
+  margin: 20px auto; 
 }
 .mifoto-container img {
-  width: 100%; 
-  height: auto; 
+  width: 100%;
+  height: auto;
   border-radius: 50%;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
