--- a/mi-portafolio/src/app/portafolio/portafolio.component.css
+++ b/mi-portafolio/src/app/portafolio/portafolio.component.css
@@ -12,8 +12,6 @@
     background-color: #f0f0f0; 
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    max-width: 500px;
-    min-width: 400px;
   }
   
   
@@ -49,3 +47,29 @@
     background-color: #0056b3; 
   }
   
+
+  .grid-item1 {
+    padding: 20px;
+    box-sizing: border-box;
+    background-color: #e6b1e7; 
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    height: max-content;
+  }
+
+  .grid-item2 {
+    padding: 10px;
+    box-sizing: border-box;
+    background-color: #ffffff; 
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    height: 400px;
+  }
+  .grid-item3 {
+    padding: 20px;
+    box-sizing: border-box;
+    background-color: #f3eef3; 
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    height: max-content;
+  }
