--- a/mi-portafolio/src/app/portafolio/pasatiempo/pasatiempo/pasatiempo.component.css
+++ b/mi-portafolio/src/app/portafolio/pasatiempo/pasatiempo/pasatiempo.component.css
@@ -2,8 +2,8 @@
   margin-bottom: 20px;
   padding: 20px;
   border-radius: 8px;
-  background-color: #0482ff;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  /* background-color: #cf8fdc98; */
+  /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); */
   
 }
 .pasatiempo-titulo {
