--- a/mi-portafolio/src/app/portafolio/portafolio.component.css
+++ b/mi-portafolio/src/app/portafolio/portafolio.component.css
@@ -1,78 +1,79 @@
-
 .grid-container {
-    display: grid;
-    grid-template-columns: auto auto auto; 
-    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-    gap: 20px;
-    padding: 20px;
-  }
-  
-  .grid-item {
-    padding: 20px;
-    box-sizing: border-box;
-    background-color: #f0f0f0; 
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  }
-  
-  
-  .item-title {
-    font-size: 24px;
-    font-weight: bold;
-    color: #007bff; 
-    margin-bottom: 10px;
-  }
-  
+  display: grid;
+  grid-template-columns: auto auto auto;
+  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+  gap: 20px;
+  padding: 20px;
+}
 
-  .item-text {
-    font-size: 16px;
-    line-height: 1.6;
-    color: #333; 
-  }
-  .item-highlight {
-    font-weight: bold;
-    color: #007bff; 
-  }
-  
-  
-  .item-link {
-    display: inline-block;
-    background-color: #007bff; 
-    color: #fff;
-    padding: 10px 20px;
-    border-radius: 5px;
-    text-decoration: none;
-  }
-  
-  .item-link:hover {
-    background-color: #0056b3; 
-  }
-  
+.grid-item {
+  padding: 20px;
+  box-sizing: border-box;
+  background-color: #f0f0f0;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
 
-  .grid-item1 {
-    padding: 20px;
-    box-sizing: border-box;
-    background-color: #e6b1e7; 
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    height: max-content;
-  }
 
-  .grid-item2 {
-    padding: 10px;
-    box-sizing: border-box;
-    background-color: #ffffff; 
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    height: 400px;
-  }
-  .grid-item3 {
-    padding: 20px;
-    box-sizing: border-box;
-    background-color: #f3eef3; 
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    height: max-content;
-  }
-  
-  
+.item-title {
+  font-size: 24px;
+  font-weight: bold;
+  color: #007bff;
+  margin-bottom: 10px;
+}
+
+
+.item-text {
+  font-size: 16px;
+  line-height: 1.6;
+  color: #333;
+}
+
+.item-highlight {
+  font-weight: bold;
+  color: #007bff;
+}
+
+
+.item-link {
+  display: inline-block;
+  background-color: #007bff;
+  color: #fff;
+  padding: 10px 20px;
+  border-radius: 5px;
+  text-decoration: none;
+}
+
+.item-link:hover {
+  background-color: #0056b3;
+}
+
+
+.grid-item1 {
+  padding: 20px;
+  box-sizing: border-box;
+  border-radius: 10px;
+  height: max-content;
+  width: 300px;
+}
+
+.grid-item2 {
+  padding: 10px;
+  box-sizing: border-box;
+  /* background-color: #f4b1ff; */
+  border-radius: 10px;
+  /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); */
+  height: 400px;
+  position: relative;
+  right: 40px;
+
+}
+
+.grid-item3 {
+  /* padding: 20px; */
+  /* box-sizing: border-box; */
+  /* background-color: #f3eef3; */
+  /* border-radius: 10px; */
+  /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); */
+  /* height: max-content; */
+}
