--- a/mi-portafolio/src/app/portafolio/portafolio.component.css
+++ b/mi-portafolio/src/app/portafolio/portafolio.component.css
@@ -70,7 +70,7 @@
 }
 
 .grid-item3 {
-  /* padding: 20px; */
+  padding: 20px;
   /* box-sizing: border-box; */
   /* background-color: #f3eef3; */
   /* border-radius: 10px; */
